# flexible-barrier

./: CMakeLists.txt  LICENSE  README.md
include/: flexible_barrier.h
src/: flexible_barrier.c
tests/: test1.c  test2.c  test3.c  test4.c  test5.c
